# cmake-presets-blog

./: CMakeLists.txt  LICENSE  README.md
